codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ 列出 ls -la
    读取 foo.txt
