codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• 已运行 2 个命令 · ctrl + t 查看转录记录
