codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• 已运行 4 个命令 · ctrl + t 查看转录记录
