codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_worked_for_uses_cumulative_turn_duration.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• 已运行 echo preparing
  └ preparing

────────────────────────────────────────────────────────────────────────────────

• Final response.

─ 工作耗时 2m 05s ──────────────────────────────────────────────────────────────
