codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__forked_thread_history_line.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• 对话从以下位置分叉：named-thread (e9f18a88-8081-4e51-9d4e-8af5cde2d8dd)
